qt6/gen_qgraphicsscene.h

class QBrush;
class QGraphicsEllipseItem;
class QGraphicsItem;
class QGraphicsItemGroup;
class QGraphicsLineItem;
class QGraphicsPathItem;
class QGraphicsPixmapItem;
class QGraphicsProxyWidget;
class QGraphicsRectItem;
class QGraphicsScene;
class QGraphicsSimpleTextItem;
class QGraphicsTextItem;
class QLineF;
class QMetaObject;
class QObject;
class QPainter;
class QPainterPath;
class QPixmap;
class QPointF;
class QRectF;
class QTransform;
class QWidget;
typedef struct QBrush QBrush;
typedef struct QGraphicsEllipseItem QGraphicsEllipseItem;
typedef struct QGraphicsItem QGraphicsItem;
typedef struct QGraphicsItemGroup QGraphicsItemGroup;
typedef struct QGraphicsLineItem QGraphicsLineItem;
typedef struct QGraphicsPathItem QGraphicsPathItem;
typedef struct QGraphicsPixmapItem QGraphicsPixmapItem;
typedef struct QGraphicsProxyWidget QGraphicsProxyWidget;
typedef struct QGraphicsRectItem QGraphicsRectItem;
typedef struct QGraphicsScene QGraphicsScene;
typedef struct QGraphicsSimpleTextItem QGraphicsSimpleTextItem;
typedef struct QGraphicsTextItem QGraphicsTextItem;
typedef struct QLineF QLineF;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPainterPath QPainterPath;
typedef struct QPixmap QPixmap;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTransform QTransform;
typedef struct QWidget QWidget;
bool QGraphicsScene_override_virtual_connectNotify(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QGraphicsScene_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QGraphicsScene_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QGraphicsScene_delete(QGraphicsScene* self);