qt6/gen_qgraphicsscene.nim

proc fQGraphicsScene_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsScene_virtualbase_connectNotify".}
proc fcQGraphicsScene_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_connectNotify".}
proc fQGraphicsScene_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QGraphicsScene_virtualbase_disconnectNotify".}
proc fcQGraphicsScene_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QGraphicsScene_override_virtual_disconnectNotify".}
proc fcQGraphicsScene_delete(self: pointer) {.importc: "QGraphicsScene_delete".}


func init*(T: type QGraphicsScene, h: ptr cQGraphicsScene): QGraphicsScene =
  T(h: h)
proc create*(T: type QGraphicsScene, ): QGraphicsScene =

  QGraphicsScene.init(fcQGraphicsScene_new())
proc create*(T: type QGraphicsScene, sceneRect: gen_qrect.QRectF): QGraphicsScene =

  QGraphicsScene.init(fcQGraphicsScene_new2(sceneRect.h))
proc create*(T: type QGraphicsScene, x: float64, y: float64, width: float64, height: float64): QGraphicsScene =

  QGraphicsScene.init(fcQGraphicsScene_new3(x, y, width, height))
proc create2*(T: type QGraphicsScene, parent: gen_qobject.QObject): QGraphicsScene =

  QGraphicsScene.init(fcQGraphicsScene_new4(parent.h))
proc create*(T: type QGraphicsScene, sceneRect: gen_qrect.QRectF, parent: gen_qobject.QObject): QGraphicsScene =

  QGraphicsScene.init(fcQGraphicsScene_new5(sceneRect.h, parent.h))
proc create*(T: type QGraphicsScene, x: float64, y: float64, width: float64, height: float64, parent: gen_qobject.QObject): QGraphicsScene =

  QGraphicsScene.init(fcQGraphicsScene_new6(x, y, width, height, parent.h))
proc metaObject*(self: QGraphicsScene, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQGraphicsScene_metaObject(self.h))

proc metacast*(self: QGraphicsScene, param1: cstring): pointer =

  fcQGraphicsScene_metacast(self.h, param1)

proc metacall*(self: QGraphicsScene, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQGraphicsScene_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QGraphicsScene, s: cstring): string =

  let v_ms = fcQGraphicsScene_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc sceneRect*(self: QGraphicsScene, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsScene_sceneRect(self.h))

proc width*(self: QGraphicsScene, ): float64 =

  fcQGraphicsScene_width(self.h)

proc height*(self: QGraphicsScene, ): float64 =

  fcQGraphicsScene_height(self.h)

proc setSceneRect*(self: QGraphicsScene, rect: gen_qrect.QRectF): void =

  fcQGraphicsScene_setSceneRect(self.h, rect.h)

proc setSceneRect2*(self: QGraphicsScene, x: float64, y: float64, w: float64, h: float64): void =

  fcQGraphicsScene_setSceneRect2(self.h, x, y, w, h)

proc render*(self: QGraphicsScene, painter: gen_qpainter.QPainter): void =

  fcQGraphicsScene_render(self.h, painter.h)

proc itemIndexMethod*(self: QGraphicsScene, ): QGraphicsSceneItemIndexMethod =

  QGraphicsSceneItemIndexMethod(fcQGraphicsScene_itemIndexMethod(self.h))

proc setItemIndexMethod*(self: QGraphicsScene, methodVal: QGraphicsSceneItemIndexMethod): void =

  fcQGraphicsScene_setItemIndexMethod(self.h, cint(methodVal))

proc bspTreeDepth*(self: QGraphicsScene, ): cint =

  fcQGraphicsScene_bspTreeDepth(self.h)

proc setBspTreeDepth*(self: QGraphicsScene, depth: cint): void =

  fcQGraphicsScene_setBspTreeDepth(self.h, depth)

proc itemsBoundingRect*(self: QGraphicsScene, ): gen_qrect.QRectF =

  gen_qrect.QRectF(h: fcQGraphicsScene_itemsBoundingRect(self.h))

proc items*(self: QGraphicsScene, ): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_items(self.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemsWithPos*(self: QGraphicsScene, pos: gen_qpoint.QPointF): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_itemsWithPos(self.h, pos.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemsWithRect*(self: QGraphicsScene, rect: gen_qrect.QRectF): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_itemsWithRect(self.h, rect.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemsWithPath*(self: QGraphicsScene, path: gen_qpainterpath.QPainterPath): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_itemsWithPath(self.h, path.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc items2*(self: QGraphicsScene, x: float64, y: float64, w: float64, h: float64, mode: gen_qnamespace.ItemSelectionMode, order: gen_qnamespace.SortOrder): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_items2(self.h, x, y, w, h, cint(mode), cint(order))
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc collidingItems*(self: QGraphicsScene, item: gen_qgraphicsitem.QGraphicsItem): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_collidingItems(self.h, item.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc itemAt*(self: QGraphicsScene, pos: gen_qpoint.QPointF, deviceTransform: gen_qtransform.QTransform): gen_qgraphicsitem.QGraphicsItem =

  gen_qgraphicsitem.QGraphicsItem(h: fcQGraphicsScene_itemAt(self.h, pos.h, deviceTransform.h))

proc itemAt2*(self: QGraphicsScene, x: float64, y: float64, deviceTransform: gen_qtransform.QTransform): gen_qgraphicsitem.QGraphicsItem =

  gen_qgraphicsitem.QGraphicsItem(h: fcQGraphicsScene_itemAt2(self.h, x, y, deviceTransform.h))

proc selectedItems*(self: QGraphicsScene, ): seq[gen_qgraphicsitem.QGraphicsItem] =

  var v_ma = fcQGraphicsScene_selectedItems(self.h)
  var vx_ret = newSeq[gen_qgraphicsitem.QGraphicsItem](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qgraphicsitem.QGraphicsItem(h: v_outCast[i])
  vx_ret

proc selectionArea*(self: QGraphicsScene, ): gen_qpainterpath.QPainterPath =

  gen_qpainterpath.QPainterPath(h: fcQGraphicsScene_selectionArea(self.h))

proc setSelectionArea*(self: QGraphicsScene, path: gen_qpainterpath.QPainterPath, deviceTransform: gen_qtransform.QTransform): void =

  fcQGraphicsScene_setSelectionArea(self.h, path.h, deviceTransform.h)

proc setSelectionAreaWithPath*(self: QGraphicsScene, path: gen_qpainterpath.QPainterPath): void =

  fcQGraphicsScene_setSelectionAreaWithPath(self.h, path.h)

proc createItemGroup*(self: QGraphicsScene, items: seq[gen_qgraphicsitem.QGraphicsItem]): gen_qgraphicsitem.QGraphicsItemGroup =

  var items_CArray = newSeq[pointer](len(items))
  for i in 0..<len(items):
    items_CArray[i] = items[i].h

  gen_qgraphicsitem.QGraphicsItemGroup(h: fcQGraphicsScene_createItemGroup(self.h, struct_miqt_array(len: csize_t(len(items)), data: if len(items) == 0: nil else: addr(items_CArray[0]))))

proc destroyItemGroup*(self: QGraphicsScene, group: gen_qgraphicsitem.QGraphicsItemGroup): void =

  fcQGraphicsScene_destroyItemGroup(self.h, group.h)

proc addItem*(self: QGraphicsScene, item: gen_qgraphicsitem.QGraphicsItem): void =

  fcQGraphicsScene_addItem(self.h, item.h)

proc addEllipse*(self: QGraphicsScene, rect: gen_qrect.QRectF): gen_qgraphicsitem.QGraphicsEllipseItem =

  gen_qgraphicsitem.QGraphicsEllipseItem(h: fcQGraphicsScene_addEllipse(self.h, rect.h))

proc addLine*(self: QGraphicsScene, line: gen_qline.QLineF): gen_qgraphicsitem.QGraphicsLineItem =

  gen_qgraphicsitem.QGraphicsLineItem(h: fcQGraphicsScene_addLine(self.h, line.h))

proc addPath*(self: QGraphicsScene, path: gen_qpainterpath.QPainterPath): gen_qgraphicsitem.QGraphicsPathItem =

  gen_qgraphicsitem.QGraphicsPathItem(h: fcQGraphicsScene_addPath(self.h, path.h))

proc addPixmap*(self: QGraphicsScene, pixmap: gen_qpixmap.QPixmap): gen_qgraphicsitem.QGraphicsPixmapItem =

  gen_qgraphicsitem.QGraphicsPixmapItem(h: fcQGraphicsScene_addPixmap(self.h, pixmap.h))

proc addRect*(self: QGraphicsScene, rect: gen_qrect.QRectF): gen_qgraphicsitem.QGraphicsRectItem =

  gen_qgraphicsitem.QGraphicsRectItem(h: fcQGraphicsScene_addRect(self.h, rect.h))

proc addText*(self: QGraphicsScene, text: string): gen_qgraphicsitem.QGraphicsTextItem =

  gen_qgraphicsitem.QGraphicsTextItem(h: fcQGraphicsScene_addText(self.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc addSimpleText*(self: QGraphicsScene, text: string): gen_qgraphicsitem.QGraphicsSimpleTextItem =

  gen_qgraphicsitem.QGraphicsSimpleTextItem(h: fcQGraphicsScene_addSimpleText(self.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc addWidget*(self: QGraphicsScene, widget: gen_qwidget.QWidget): gen_qgraphicsproxywidget.QGraphicsProxyWidget =

  gen_qgraphicsproxywidget.QGraphicsProxyWidget(h: fcQGraphicsScene_addWidget(self.h, widget.h))

proc addEllipse2*(self: QGraphicsScene, x: float64, y: float64, w: float64, h: float64): gen_qgraphicsitem.QGraphicsEllipseItem =

  gen_qgraphicsitem.QGraphicsEllipseItem(h: fcQGraphicsScene_addEllipse2(self.h, x, y, w, h))

proc addLine2*(self: QGraphicsScene, x1: float64, y1: float64, x2: float64, y2: float64): gen_qgraphicsitem.QGraphicsLineItem =

  gen_qgraphicsitem.QGraphicsLineItem(h: fcQGraphicsScene_addLine2(self.h, x1, y1, x2, y2))

proc addRect2*(self: QGraphicsScene, x: float64, y: float64, w: float64, h: float64): gen_qgraphicsitem.QGraphicsRectItem =

  gen_qgraphicsitem.QGraphicsRectItem(h: fcQGraphicsScene_addRect2(self.h, x, y, w, h))

proc removeItem*(self: QGraphicsScene, item: gen_qgraphicsitem.QGraphicsItem): void =

  fcQGraphicsScene_removeItem(self.h, item.h)

proc focusItem*(self: QGraphicsScene, ): gen_qgraphicsitem.QGraphicsItem =

  gen_qgraphicsitem.QGraphicsItem(h: fcQGraphicsScene_focusItem(self.h))

proc setFocusItem*(self: QGraphicsScene, item: gen_qgraphicsitem.QGraphicsItem): void =

  fcQGraphicsScene_setFocusItem(self.h, item.h)

proc hasFocus*(self: QGraphicsScene, ): bool =

  fcQGraphicsScene_hasFocus(self.h)

proc setFocus*(self: QGraphicsScene, ): void =

  fcQGraphicsScene_setFocus(self.h)

proc clearFocus*(self: QGraphicsScene, ): void =

  fcQGraphicsScene_clearFocus(self.h)

proc setStickyFocus*(self: QGraphicsScene, enabled: bool): void =

  fcQGraphicsScene_setStickyFocus(self.h, enabled)

proc stickyFocus*(self: QGraphicsScene, ): bool =

  fcQGraphicsScene_stickyFocus(self.h)

proc mouseGrabberItem*(self: QGraphicsScene, ): gen_qgraphicsitem.QGraphicsItem =

  gen_qgraphicsitem.QGraphicsItem(h: fcQGraphicsScene_mouseGrabberItem(self.h))

proc backgroundBrush*(self: QGraphicsScene, ): gen_qbrush.QBrush =

  gen_qbrush.QBrush(h: fcQGraphicsScene_backgroundBrush(self.h))

proc setBackgroundBrush*(self: QGraphicsScene, brush: gen_qbrush.QBrush): void =

  fcQGraphicsScene_setBackgroundBrush(self.h, brush.h)

proc foregroundBrush*(self: QGraphicsScene, ): gen_qbrush.QBrush =
